--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@rollup/plugin-commonjs": "^19.0.1",
     "@tp/h5utils": "^3.3.8",
+    "@varlet/ui": "^1.27.20",
     "@vitejs/plugin-vue": "^1.2.5",
     "axios": "^0.21.1",
     "captcha-sdk": "^0.6.3",
@@ -22,12 +23,10 @@
     "postcss-px-to-viewport": "^1.1.1",
     "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-external-globals": "^0.6.1",
-    "vant": "^3.1.5",
     "vite": "^2.4.2",
     "vite-plugin-style-import": "^1.0.1",
     "vue": "^3.2.21",
-    "vue-router": "^4.0.10",
-    "vuex": "^4.0.2"
+    "vue-router": "^4.0.10"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
@@ -57,6 +56,7 @@
     "pinia": "^2.0.0-rc.10",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3",
+    "unplugin-vue-components": "^0.22.4",
     "vite-plugin-mock": "^2.9.3",
     "vue-tsc": "^0.0.24"
   },
